Partially Migrate yang-data-codec-xml to xmlunit-core
Migrate easy-to-migrate tests to xmlunit-core, reducing our exposure to
legacy.

Change-Id: If07f69cb40179df00daabf68fc6faf34df8c2d08
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>